added some funtionalities in the horario page view

--- a/barbearia/gerenciador_horario/static/horario.css
+++ b/barbearia/gerenciador_horario/static/horario.css
@@ -9,5 +9,11 @@ body{
     justify-content: space-around;
 }
 table{
-    align-items: center;
+    border: 1px solid;
+    display: grid;
+    width: 170px;
+}
+
+thead, th{
+    align-self: center;
 }
