some modifications in the models, added functionalities that make updates on DB

--- a/barbearia/gerenciador_horario/templates/horario.html
+++ b/barbearia/gerenciador_horario/templates/horario.html
@@ -33,7 +33,7 @@
             <tfoot>
                 <tr>
                     <td>
-                        <a href=""><button>Agendar na Segunda</button></a>
+                        <a href="horario/segunda"><button>Agendar na Segunda</button></a>
                     </td>
                 </tr>
             </tfoot>
