--- a/barbearia/gerenciador_horario/templates/quinta.html
+++ b/barbearia/gerenciador_horario/templates/quinta.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-<title>Agendar na Segunda</title>
+<title>Agendar na Qunta</title>
 </head>
 
 <body>
-    <form action="segundaAgendado/" method="post">
+    <form action="quintaAgendado/" method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value="Agendar">
