testing the host

--- a/barbearia/gerenciador_horario/templates/horario.html
+++ b/barbearia/gerenciador_horario/templates/horario.html
@@ -3,7 +3,7 @@
 <head>
 <title>Page Title</title>
 {% load static %}
-<link rel="stylesheet" href="{% static 'horario.css' %}" />
+<link rel="stylesheet" type="text/css" href="{% static 'horario.css' %}" />
 </head>
 <body>
 
