Testing the host

--- a/barbearia/gerenciador_horario/templates/horario.html
+++ b/barbearia/gerenciador_horario/templates/horario.html
@@ -157,7 +157,7 @@
                         {% endif %}
 
                     </table>
-                    <a href="horario/sexta"><button class="button-day">Agendar na Friday</button></a>
+                    <a href="horario/sexta"><button class="button-day">Agendar na Sexta</button></a>
                 </div>
             </div>    
         </div>
