--- a/barbearia/gerenciador_horario/static/horario.css
+++ b/barbearia/gerenciador_horario/static/horario.css
@@ -5,8 +5,8 @@
 }
 
 body{
-    font-family: 'Aral', sans-serif;
-    background-color: #f4f4f4;
+    font-family: 'Arial', sans-serif;
+    background-color: #333;
     color: #333;
 }
 
