--- a/barbearia/gerenciador_horario/templates/quinta.html
+++ b/barbearia/gerenciador_horario/templates/quinta.html
@@ -3,13 +3,39 @@
 <head>
   <meta charset="UTF-8">
 <title>Agendar na Qunta</title>
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static "formagendamento.css" %}"/>
+
 </head>
 
 <body>
-    <form action="quintaAgendado/" method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Agendar">
-    </form>
+  <section>
+    <div class="container">
+      <h2>Formulário de agendamento</h2>
+
+      <form class="form-agendamento" action="quintaAgendado/" method="post">
+          {% csrf_token %}
+          
+          <div class="form-group-user">
+            {{form.user_name.label}}
+            {{form.user_name}}
+          </div>
+          <div class="form-group-user">
+            {{form.user_number.label}}
+            {{form.user_number}}
+          </div>
+          <div class="form-group">
+            {{form.user_horario.label}}
+            {{form.user_horario}}
+          </div>
+          <div class="form-group">
+            {{form.user_to_schedule.label}}
+            {{form.user_to_schedule}}
+          </div>
+
+          <input id="button-submit"type="submit" value="Agendar">
+      </form>
+    </div>
+  </section>
 </body>
 </html>
