--- a/barbearia/gerenciador_horario/templates/quinta.html
+++ b/barbearia/gerenciador_horario/templates/quinta.html
@@ -8,6 +8,13 @@
 
 </head>
 
+<header>
+  <div class="header-container">
+      <h1>Barbearia corte rápido e chavoso</h1>
+      <a href="/"><button class="home-button">Painel de Horários</button></a>
+  </div>
+</header>
+
 <body>
   <section>
     <div class="container">
