testing the host

--- a/barbearia/gerenciador_horario/templates/agendado.html
+++ b/barbearia/gerenciador_horario/templates/agendado.html
@@ -10,7 +10,7 @@
 <header>
     <div class="header-container">
         <h1>Barbearia corte rápido e chavoso</h1>
-        <a href="/"><button class="home-button">Painel de Horários</button></a>
+        <button class="home-button"><a href="/">Painel de Horários</a></button>
     </div>
 </header>
 
@@ -27,7 +27,7 @@
                                 <th scope="col">Horário</th>
                                 <th scope="col">Status</th>
                                 <th scope="col">Cliente</th>
-                                <th scope="col">Telefofe</th>
+                                <th scope="col">Telefone</th>
                             </tr>
                         </thead>
                         
@@ -62,7 +62,7 @@
                                 <th scope="col">Horário</th>
                                 <th scope="col">Status</th>
                                 <th scope="col">Cliente</th>
-                                <th scope="col">Telefofe</th>
+                                <th scope="col">Telefone</th>
                             </tr>
                         </thead>
                         
@@ -97,7 +97,7 @@
                                 <th scope="col">Horário</th>
                                 <th scope="col">Status</th>
                                 <th scope="col">Cliente</th>
-                                <th scope="col">Telefofe</th>
+                                <th scope="col">Telefone</th>
                             </tr>
                         </thead>
                         
@@ -132,7 +132,7 @@
                                 <th scope="col">Horário</th>
                                 <th scope="col">Status</th>
                                 <th scope="col">Cliente</th>
-                                <th scope="col">Telefofe</th>
+                                <th scope="col">Telefone</th>
                             </tr>
                         </thead>
                         
@@ -167,7 +167,7 @@
                                 <th scope="col">Horário</th>
                                 <th scope="col">Status</th>
                                 <th scope="col">Cliente</th>
-                                <th scope="col">Telefofe</th>
+                                <th scope="col">Telefone</th>
                             </tr>
                         </thead>
                         
