--- a/barbearia/gerenciador_horario/templates/horario.html
+++ b/barbearia/gerenciador_horario/templates/horario.html
@@ -14,7 +14,7 @@
 
     <section>
         <div class="container">
-            <h2>Agende seu horário</h2>
+            <h2>Tabela de horários</h2>
             <div class="week-table">
                 <div class="week-day">
                     <h3>Segunda-feira</h3>
