--- a/barbearia/gerenciador_horario/templates/quarta.html
+++ b/barbearia/gerenciador_horario/templates/quarta.html
@@ -11,7 +11,7 @@
 <header>
   <div class="header-container">
       <h1>Barbearia corte rápido e chavoso</h1>
-      <a href="/"><button class="home-button">Painel de Horários</button></a>
+      <button class="home-button"><a href="/">Painel de Horários</a></button>
   </div>
 </header>
 
