--- a/barbearia/gerenciador_horario/static/agendado.css
+++ b/barbearia/gerenciador_horario/static/agendado.css
@@ -6,15 +6,15 @@
 
 body{
     font-family: 'Arial', sans-serif;
-    background-color: #333;
+    background-color: #f4f4f4;
     color: #333;
 }
 
 
 
 .header-container{
-    background-color: #d44810;
-    color: #333;
+    background-color: #0056b3;
+    color: #fff;
     text-align: center;
     padding-top: 40px;
     display: flex;
@@ -38,8 +38,6 @@ a{
     text-decoration: none;
 }
 
-
-
 .container{
     width: 90%;
     max-width: 1200px;
@@ -51,7 +49,7 @@ section h2{
     font-size: 2rem;
     text-align: center;
     margin-bottom: 40px;
-    color: #ccc;
+    color: #333;
 }
 
 .week-table-scheduled{
@@ -63,7 +61,7 @@ section h2{
 .week-day-scheduled{
     margin: 10px;
     padding: 20px;
-    background-color: #ccc;
+    background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
@@ -80,6 +78,7 @@ section h2{
 table{
     width: 100%;
     border-collapse: collapse;
+    font-size: 1.1rem;
 }
 
 tbody{
@@ -88,6 +87,6 @@ tbody{
 
 table th, table td{
     border: 1px solid #333;
-    padding: 5px;
+    padding: 8px;
 }
 
