--- a/barbearia/gerenciador_horario/static/formagendamento.css
+++ b/barbearia/gerenciador_horario/static/formagendamento.css
@@ -6,12 +6,12 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #333;
+    background-color: #333; 
 }
 
 .header-container{
-    background-color: #d44810;
-    color: #333;
+    background-color: #0056b3; 
+    color: #fff;
     text-align: center;
     padding-top: 40px;
     display: flex;
@@ -25,10 +25,10 @@ body {
     align-content: center;
     height: 30px;
     width: 130px;
-    border-radius: 4px;
+    border-radius: 5px;
     margin: 10px;
     color: #333;
-    background-color: #ccc;
+    background-color: #fff;
 }
 
 a{
@@ -39,12 +39,14 @@ a{
     width: 60%;
     margin: 20%;
     padding: 20px 0;
-    background-color: #d44810;
+    background-color: #0056b3;
+    color: #fff;
     border-radius: 7px;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     align-content: center;
+
 }
 
 .form-agendamento {
