--- a/barbearia/gerenciador_horario/templates/terca.html
+++ b/barbearia/gerenciador_horario/templates/terca.html
@@ -11,8 +11,7 @@
 <header>
   <div class="header-container">
       <h1>Barbearia corte rápido e chavoso</h1>
-      <a href="/"><button class="home-button">Painel de Horários</button></a>
-  </div>
+      <button class="home-button"><a href="/">Painel de Horários</a></button>
 </header>
 
 <body>
