forms validation implemented

--- a/barbearia/gerenciador_horario/templates/horario.html
+++ b/barbearia/gerenciador_horario/templates/horario.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
-<title>Page Title</title>
-{% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'horario.css' %}" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-wiwdth, initial-scale=1">
+    <title>Horários disponíveis</title>
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'horario.css' %}" />
 </head>
 <body>
     <header>
