--- a/barbearia/gerenciador_horario/templates/agendado.html
+++ b/barbearia/gerenciador_horario/templates/agendado.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-<title>Horários agendados</title>
-{% load static %}
-<link rel= "stylesheet" type="text/css" href="{% static "agendado.css" %}"/>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-wiwdth, initial-scale=1">
+    <title>Horários agendados</title>
+    {% load static %}
+    <link rel= "stylesheet" type="text/css" href="{% static "agendado.css" %}"/>
 </head>
 
 <header>
