--- a/barbearia/gerenciador_horario/templates/quinta.html
+++ b/barbearia/gerenciador_horario/templates/quinta.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-wiwdth, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Agendar na Quinta</title>
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static "formagendamento.css" %}"/>
