--- a/barbearia/gerenciador_horario/static/agendado.css
+++ b/barbearia/gerenciador_horario/static/agendado.css
@@ -29,6 +29,7 @@ body{
     height: 30px;
     width: 130px;
     border-radius: 4px;
+    border: none;
     margin: 10px;
     color: #333;
     background-color: #ccc;
@@ -54,10 +55,11 @@ section h2{
 
 .week-table-scheduled{
     display: flex;
+    flex-direction: column;
     justify-content: space-evenly;
     flex-wrap: wrap;
 }
-
+ 
 .week-day-scheduled{
     margin: 10px;
     padding: 20px;
