melhorada a responsividade geral

--- a/barbearia/staticfiles/agendado.css
+++ b/barbearia/staticfiles/agendado.css
@@ -1,7 +1,7 @@
-* {
+*{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: 0;
 }
 
 body{
@@ -10,11 +10,33 @@ body{
     color: #333;
 }
 
+
+
 .header-container{
     background-color: #0056b3;
     color: #fff;
     text-align: center;
-    padding: 40px 0;
+    padding-top: 40px;
+    display: flex;
+    flex-direction: column;
+}
+
+.home-button{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+    height: 30px;
+    width: 130px;
+    border-radius: 4px;
+    border: none;
+    margin: 10px;
+    color: #333;
+    background-color: #ccc;
+}
+
+a{
+    text-decoration: none;
 }
 
 .container{
@@ -25,19 +47,20 @@ body{
 }
 
 section h2{
-    font-size: 2.5rem;
+    font-size: 2rem;
     text-align: center;
     margin-bottom: 40px;
     color: #333;
 }
 
-.week-table{
+.week-table-scheduled{
     display: flex;
+    flex-direction: column;
     justify-content: space-evenly;
     flex-wrap: wrap;
 }
-
-.week-day{
+ 
+.week-day-scheduled{
     margin: 10px;
     padding: 20px;
     background-color: #fff;
@@ -45,25 +68,12 @@ section h2{
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
     min-width: 300px;
-    display: grid;
-    align-items: end;
 }
 
-.week-day h3{
+.week-day-scheduled h3{
     font-size: 1.8rem;
     text-align: center;
     margin-bottom: 20px;
-}
-
-
-.button-day{
-    font-size: 1rem;
-    padding: 10px 20px;
-    border-radius: 5px;
-    margin: 15px;
-    text-align: center;
-    border: none;
-    background-color: #ccc;
 }
 
 table{
