melhorada a responsividade em algumas views

--- a/barbearia/gerenciador_horario/templates/agendado.html
+++ b/barbearia/gerenciador_horario/templates/agendado.html
@@ -10,7 +10,7 @@
 
 <header>
     <div class="header-container">
-        <h1>Barbearia corte rápido e chavoso</h1>
+        <h1>Barbearia corte rápido</h1>
         <button class="home-button"><a href="/">Painel de Horários</a></button>
     </div>
 </header>
