--- a/barbearia/gerenciador_horario/templates/horario.html
+++ b/barbearia/gerenciador_horario/templates/horario.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="header-container">
-            <h1>Barbearia corte rápido e chavoso</h1>
+            <h1>Barbearia corte rápido</h1>
         </div>
     </header>
 
