--- a/barbearia/gerenciador_horario/static/agendado.css
+++ b/barbearia/gerenciador_horario/static/agendado.css
@@ -13,6 +13,7 @@ body{
 
 
 .header-container{
+    width: 100%;
     background-color: #0056b3;
     color: #fff;
     text-align: center;
@@ -39,14 +40,18 @@ a{
     text-decoration: none;
 }
 
+a:visited{
+    color: #333;
+}
+
 .container{
-    width: 90%;
+    width: auto;
     max-width: 1200px;
-    margin: 0 auto;
+    margin: 0% 2%;
     padding: 20px 0;
 }
 
-section h2{
+section h2{ 
     font-size: 2rem;
     text-align: center;
     margin-bottom: 40px;
