Added clear all day schedules button

--- a/barbearia/gerenciador_horario/templates/agendado.html
+++ b/barbearia/gerenciador_horario/templates/agendado.html
@@ -49,10 +49,16 @@
                                 </tr>
                             {% endif %}
                             {% endfor %}
+                            
                         </tbody>
                         {% endif %}
-                        
                     </table>
+
+                    <form class="form-finish-schedules" action="segundaAgendado/" method="post">
+                        {% csrf_token %}
+                        <input class="button-finish-schedules" type="submit" value="Limpar agendamentos"/>
+                    </form>
+
                 </div>
 
                 <div class="week-day-scheduled">
@@ -88,6 +94,12 @@
                         {% endif %}
                         
                     </table>
+
+                    <form class="form-finish-schedules" action="tercaAgendado/" method="post">
+                        {% csrf_token %}
+                        <input class="button-finish-schedules" type="submit" value="Limpar agendamentos"/>
+                    </form>
+
                 </div>
 
                 <div class="week-day-scheduled">
@@ -123,6 +135,12 @@
                         {% endif %}
                         
                     </table>
+
+                    <form class="form-finish-schedules" action="quartaAgendado/" method="post">
+                        {% csrf_token %}
+                        <input class="button-finish-schedules" type="submit" value="Limpar agendamentos"/>
+                    </form>
+
                 </div>
 
                 <div class="week-day-scheduled">
@@ -158,6 +176,12 @@
                         {% endif %}
                         
                     </table>
+
+                    <form class="form-finish-schedules" action="quintaAgendado/" method="post">
+                        {% csrf_token %}
+                        <input class="button-finish-schedules" type="submit" value="Limpar agendamentos"/>
+                    </form>
+
                 </div>
 
                 <div class="week-day-scheduled">
@@ -193,10 +217,17 @@
                         {% endif %}
                         
                     </table>
+
+                    <form class="form-finish-schedules" action="sextaAgendado/" method="post">
+                        {% csrf_token %}
+                        <input class="button-finish-schedules" type="submit" value="Limpar agendamentos"/>
+                    </form>
+
                 </div>
 
             </div>    
         </div>
     </section>
+
 </body>
 </html>
