--- a/barbearia/gerenciador_horario/templates/agendado.html
+++ b/barbearia/gerenciador_horario/templates/agendado.html
@@ -53,12 +53,13 @@
                         </tbody>
                         {% endif %}
                     </table>
-
-                    <form class="form-finish-schedules" action="segundaAgendado/" method="post">
-                        {% csrf_token %}
-                        <input class="button-finish-schedules" type="submit" value="Limpar agendamentos"/>
-                    </form>
-
+                    
+                    <div class="form-finish-schedules-container">
+                        <form class="form-finish-schedules" action="segundaAgendado/" method="post">
+                            {% csrf_token %}
+                            <input class="button-finish-schedules" type="submit" value="Limpar agendamentos"/>
+                        </form>
+                    </div>
                 </div>
 
                 <div class="week-day-scheduled">
@@ -94,12 +95,12 @@
                         {% endif %}
                         
                     </table>
-
-                    <form class="form-finish-schedules" action="tercaAgendado/" method="post">
-                        {% csrf_token %}
-                        <input class="button-finish-schedules" type="submit" value="Limpar agendamentos"/>
-                    </form>
-
+                    <div class="form-finish-schedules-container">
+                        <form class="form-finish-schedules" action="tercaAgendado/" method="post">
+                            {% csrf_token %}
+                            <input class="button-finish-schedules" type="submit" value="Limpar agendamentos"/>
+                        </form>
+                    </div>
                 </div>
 
                 <div class="week-day-scheduled">
@@ -136,11 +137,12 @@
                         
                     </table>
 
-                    <form class="form-finish-schedules" action="quartaAgendado/" method="post">
-                        {% csrf_token %}
-                        <input class="button-finish-schedules" type="submit" value="Limpar agendamentos"/>
-                    </form>
-
+                    <div class="form-finish-schedules-container">
+                        <form class="form-finish-schedules" action="quartaAgendado/" method="post">
+                            {% csrf_token %}
+                            <input class="button-finish-schedules" type="submit" value="Limpar agendamentos"/>
+                        </form>
+                    </div>
                 </div>
 
                 <div class="week-day-scheduled">
@@ -177,11 +179,12 @@
                         
                     </table>
 
-                    <form class="form-finish-schedules" action="quintaAgendado/" method="post">
-                        {% csrf_token %}
-                        <input class="button-finish-schedules" type="submit" value="Limpar agendamentos"/>
-                    </form>
-
+                    <div class="form-finish-schedules-container">
+                        <form class="form-finish-schedules" action="quintaAgendado/" method="post">
+                            {% csrf_token %}
+                            <input class="button-finish-schedules" type="submit" value="Limpar agendamentos"/>
+                        </form>
+                    </div>
                 </div>
 
                 <div class="week-day-scheduled">
@@ -218,11 +221,12 @@
                         
                     </table>
 
-                    <form class="form-finish-schedules" action="sextaAgendado/" method="post">
-                        {% csrf_token %}
-                        <input class="button-finish-schedules" type="submit" value="Limpar agendamentos"/>
-                    </form>
-
+                    <div class="form-finish-schedules-container">
+                        <form class="form-finish-schedules" action="sextaAgendado/" method="post">
+                            {% csrf_token %}
+                            <input class="button-finish-schedules" type="submit" value="Limpar agendamentos"/>
+                        </form>
+                    </div>
                 </div>
 
             </div>    
