--- a/barbearia/gerenciador_horario/templates/quinta.html
+++ b/barbearia/gerenciador_horario/templates/quinta.html
@@ -31,6 +31,7 @@
             {{form.user_number.label}}
             {{form.user_number}}
           </div>
+          <span>{{form.user_number.errors}}</span>
           <div class="form-group">
             {{form.user_horario.label}}
             {{form.user_horario}}
