--- a/barbearia/gerenciador_horario/static/agendado.css
+++ b/barbearia/gerenciador_horario/static/agendado.css
@@ -92,3 +92,16 @@ table th, table td{
     padding: 8px;
 }
 
+.form-finish-schedules-container {
+    margin-top: 15px;
+}
+
+.form-finish-schedules-container input{
+    height: 30px;
+    width: 230px;
+    font-size: 0.95rem;
+    background-color: #ccc;
+    border: none;
+    border-radius: 5px;
+    font-weight: 500;
+}
